WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
VERIFIED FIXED
285007
[Win] view size shouldn't be affected by custom device scale factor
https://bugs.webkit.org/show_bug.cgi?id=285007
Summary
[Win] view size shouldn't be affected by custom device scale factor
Fujii Hironori
Reported
2024-12-19 23:57:33 PST
Reported by Playwright: [Bug]: Mobile Device Emulation not rendering sites to viewport size · Issue #33702 · microsoft/playwright
https://github.com/microsoft/playwright/issues/33702
279794@main
added a device scale factor for Windows port. In a Win32 app in high DPI, native window size is scaled. For example, 100x100 window (in normal DPI) becomes 150x150 in 150% display. All dimensions and positions have to be converted between inside WebKit and a native Win32 window. win32 coordinate system can be converted to WebKit coordinate system by division by the scale factor. WebKit coordinate system can be converted to win32 coordinate system by multiplication by the scale factor. However, a custom device scale factor is specified, the custom device scale factor shouldn't be used for the conversion. The conversion should be done by the intrinsic device scale factor.
Attachments
WIP patch
(20.03 KB, patch)
2024-12-19 23:58 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-12-19 23:58:50 PST
Created
attachment 473612
[details]
WIP patch
Fujii Hironori
Comment 2
2024-12-23 20:47:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38356
Radar WebKit Bug Importer
Comment 3
2024-12-26 23:58:14 PST
<
rdar://problem/142088306
>
EWS
Comment 4
2025-01-22 11:45:11 PST
Committed
289251@main
(b6d7f33139c7): <
https://commits.webkit.org/289251@main
> Reviewed commits have been landed. Closing PR #38356 and removing active labels.
Yury Semikhatsky
Comment 5
2025-02-05 09:08:14 PST
Finally rolled this to Playwright and I can confirm that the customer's problem has been fixed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug