[Win] The view size shouldn't be affected by the custom device scale factor https://bugs.webkit.org/show_bug.cgi?id=285007

Reviewed by Don Olmstead.

<https://commits.webkit.org/279794@main> added the device scale factor
support for Windows port.

Unlike other modern platforms, in the legacy win32 platfrom, a native
window size is scaled in high DPI. For example, 100x100 window (in
normal DPI) becomes 150x150 in a 150% DPI display. Thus, all
dimensions and positions have to be converted between the inside
WebKit and a native win32 window. The win32 coordinate system can be
converted to the WebKit coordinate system by division by the scale
factor. The WebKit coordinate system can be converted to the win32
coordinate system by multiplication by the scale factor.

However, a custom device scale factor is specified, the custom device
scale factor shouldn't be used for the conversion. The conversion
should be done by the intrinsic device scale factor.

* Source/WebCore/PlatformWin.cmake:
* Source/WebCore/platform/graphics/FloatPoint.h:
* Source/WebCore/platform/graphics/IntRect.h:
* Source/WebCore/platform/graphics/win/FloatPointWin.cpp: Added.
(WebCore::FloatPoint::FloatPoint):
* Source/WebKit/Shared/WebPageCreationParameters.h:
* Source/WebKit/Shared/WebPageCreationParameters.serialization.in:
* Source/WebKit/Shared/win/WebEventFactory.cpp:
(WebKit::WebEventFactory::createWebMouseEvent):
(WebKit::WebEventFactory::createWebWheelEvent):
* Source/WebKit/UIProcess/BackingStore.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/skia/BackingStoreSkia.cpp:
(WebKit::BackingStore::paint):
* Source/WebKit/UIProcess/wc/DrawingAreaProxyWC.cpp:
(WebKit::DrawingAreaProxyWC::sizeDidChange):
* Source/WebKit/UIProcess/win/WebPopupMenuProxyWin.cpp:
(WebKit::WebPopupMenuProxyWin::calculatePositionAndSize):
(WebKit::WebPopupMenuProxyWin::invalidateItem):
(WebKit::WebPopupMenuProxyWin::contentsSize const):
(WebKit::WebPopupMenuProxyWin::scrollTo):
(WebKit::WebPopupMenuProxyWin::invalidateScrollbarRect):
(WebKit::WebPopupMenuProxyWin::onSize):
(WebKit::WebPopupMenuProxyWin::onMouseMove):
(WebKit::WebPopupMenuProxyWin::onLButtonDown):
(WebKit::WebPopupMenuProxyWin::onLButtonUp):
(WebKit::WebPopupMenuProxyWin::paint):
(WebKit::WebPopupMenuProxyWin::visibleItems const):
* Source/WebKit/UIProcess/win/WebView.cpp:
(WebKit::WebView::onMouseEvent):
(WebKit::WebView::onWheelEvent):
(WebKit::drawPageBackground):
(WebKit::WebView::paint):
(WebKit::WebView::onPaintEvent):
(WebKit::WebView::onSizeEvent):
(WebKit::WebView::setScrollOffsetOnNextResize):
(WebKit::WebView::setViewNeedsDisplay):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHostTextureMapper.cpp:
(WebKit::LayerTreeHost::compositeLayersToContext):
(WebKit::LayerTreeHost::applyDeviceScaleFactor):
* Source/WebKit/WebProcess/WebPage/DrawingArea.h:
(WebKit::DrawingArea::setIntrinsicDeviceScaleFactor):
(WebKit::DrawingArea::updateGeometryWC):
* Source/WebKit/WebProcess/WebPage/DrawingArea.messages.in:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::m_textAnimationController):
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.cpp:
(WebKit::DrawingAreaWC::updateGeometryWC):
(WebKit::DrawingAreaWC::sendUpdateAC):
(WebKit::DrawingAreaWC::updateRootLayerDeviceScaleFactor):
* Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.h:
* Tools/MiniBrowser/win/WebKitBrowserWindow.cpp:
(WebKitBrowserWindow::create):
(WebKitBrowserWindow::adjustScaleFactors):
(WebKitBrowserWindow::resetZoom):
* Tools/MiniBrowser/win/WebKitBrowserWindow.h:

Canonical link: https://commits.webkit.org/289251@main