Source/WebKit/WebProcess/WebPage/wc/DrawingAreaWC.cpp
@@ -140,10 +140,11 @@ void DrawingAreaWC::setLayerTreeStateIsFrozen(bool isFrozen)
     }
 }
 
-void DrawingAreaWC::updateGeometryWC(uint64_t backingStoreStateID, IntSize viewSize, float deviceScaleFactor)
+void DrawingAreaWC::updateGeometryWC(uint64_t backingStoreStateID, IntSize viewSize, float deviceScaleFactor, float intrinsicDeviceScaleFactor)
 {
     m_backingStoreStateID = backingStoreStateID;
     m_webPage->setDeviceScaleFactor(deviceScaleFactor);
+    m_webPage->setIntrinsicDeviceScaleFactor(intrinsicDeviceScaleFactor);
     m_webPage->setSize(viewSize);
 }
 
@@ -272,7 +273,7 @@ void DrawingAreaWC::sendUpdateAC()
         else
             size = frame->size();
         FloatSize viewport { size };
-        viewport.scale(m_webPage->deviceScaleFactor());
+        viewport.scale(m_webPage->intrinsicDeviceScaleFactor());
         m_updateInfo.viewport = WebCore::expandedIntSize(viewport);
         updateRootLayerDeviceScaleFactor(rootLayer.layer);
         rootLayer.layer->flushCompositingStateForThisLayerOnly();
@@ -307,9 +308,8 @@ void DrawingAreaWC::sendUpdateAC()
 
 void DrawingAreaWC::updateRootLayerDeviceScaleFactor(WebCore::GraphicsLayer& layer)
 {
-    float deviceScaleFactor = m_webPage->deviceScaleFactor();
     TransformationMatrix m;
-    m.scale(deviceScaleFactor);
+    m.scale(m_webPage->intrinsicDeviceScaleFactor());
     layer.setTransform(m);
 }
 
